--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         jQuery('#login-form')[0].reset();
         jQuery('#msg').html('All the Best! ');
         jQuery('#btnSubmit').attr('dissable',false);
-        location.replace("http://127.0.0.1:5500/quiz.html")
+        location.replace("https://hrithik1122.github.io/quizilla.github.io/quiz.html")
       }
     });
   });
