--- a/quiz.html
+++ b/quiz.html
@@ -274,10 +274,9 @@ style="display: block; margin: 0 auto; background-color: #224465; color: white; 
       data: jQuery('#quiz-form').serialize(),
       success: function(result){
         jQuery('#quiz-form')[0].reset();
-        // jQuery('#msg').html('All the Best! ');
         jQuery('#quizSubmit').attr('dissable',false);
-        location.replace("http://127.0.0.1:5500/thankyou.html")
-        // window.location.href='http://127.0.0.1:5500/thankyou.html';
+        location.replace("https://hrithik1122.github.io/quizilla.github.io/thankyou.html")
+ 
       }
     });
   });
