--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <span class="required">Password</span>
       </label>
     </div> -->
-    <input type="submit" id="btnsubmit" value="Log In" name="btnsubmit" />
+    <input type="submit" id="btnsubmit" value="Next" name="btnsubmit" />
     <div id="msg1"></div>
     <div id="msg"></div>
     <!-- <div class="email">
