--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 <form method="POST" action="" id="login-form" autocomplete="off" role="main">
     <h1 class="a11y-hidden">Login Form</h1>
     <div>
+      <h4 align="center">
+      Examination System
+    </h4>
+    <div>
+      <h4 align="center" style="font-family: Nunito, sans-serif; font-size: 1.4rem;">
+      <b>Student Login</b>
+    </h4>
         <label class="label-email">
           <input type="text" class="text" name="name" placeholder="Full Name" tabindex="1" required />
           <span class="required">Full Name</span>
