--- a/quiz.html
+++ b/quiz.html
@@ -29,35 +29,35 @@
     </div>
     <div id="q1" class="collapse show" aria-labelledby="h1">
       <div class="card-body">
-        <p>Philology is the 
-          <input onclick="responsiveVoice.speak('Philology is the')" type="button" value="🔊 Play" />
+        <p>What does HTML stand for?
+          <input onclick="responsiveVoice.speak('What does HTML stand for?')" type="button" value="🔊 Play" />
         </p>
 
     <div class="form-check">
           <input class="form-check-input" type="radio" name="q1" id="q1_r1" value="0" required/>
           <label class="form-check-label" for="q1_r1">
-            study of bones
+            Home Text Markup Language
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q1" id="q1_r2" value="1" required/>
           <label class="form-check-label" for="q1_r2">
-            study of muscles
+            Hyper Text Markup Language
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q1" id="q1_r3" value="0" required/>
           <label class="form-check-label" for="q1_r3">
-            study of architecture
+            Hyperlink and Text Markup Language
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q1" id="q1_r4" value="0" required/>
           <label class="form-check-label" for="q1_r4">
-            science of languages
+            Hyperlink Text Markup Language
           </label>
         </div>
 
@@ -77,35 +77,35 @@
     </div>
     <div id="q2" class="collapse" aria-labelledby="h2">
       <div class="card-body">
-        <p>Oscar Awards are conferred annually by 
-          <input onclick="responsiveVoice.speak('Oscar Awards are conferred annually by')" type="button" value="🔊 Play" />
+        <p>Which of the following is the correct way to declare the constant in PHP?
+          <input onclick="responsiveVoice.speak('Which of the following is the correct way to declare the constant in PHP?')" type="button" value="🔊 Play" />
         </p>
 
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q2" id="q2_r1" value="0" required/>
+          <input class="form-check-input" type="radio" name="q2" id="q2_r1" value="1" required/>
           <label class="form-check-label" for="q2_r1">
-            Academy of Motion Pictures, arts and sciences, USA
+            const
           </label>
         </div>
 
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q2" id="q2_r2" value="1" required/>
+          <input class="form-check-input" type="radio" name="q2" id="q2_r2" value="0" required/>
           <label class="form-check-label" for="q2_r2">
-            Government of United States
+           define
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q2" id="q2_r3" value="0" required/>
           <label class="form-check-label" for="q2_r3">
-            Hollywood Foreign Press Association
+            var
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q2" id="q2_r4" value="0" required/>
           <label class="form-check-label" for="q2_r4">
-            None of the above
+           let
           </label>
         </div>
 
@@ -124,35 +124,37 @@
     </div>
     <div id="q3" class="collapse" aria-labelledby="h3">
       <div class="card-body">
-        <p>Robert Koch worked on 
-          <input onclick="responsiveVoice.speak('Robert Koch worked on')" type="button" value="🔊 Play" />
+        <p>Which of the below method is used to generate the unique id in Php? 
+          <input onclick="responsiveVoice.speak('Which of the below method is used to generate the unique id in Php? ')" type="button" value="🔊 Play" />
         </p>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q3" id="q3_r1" value="0" required/>
           <label class="form-check-label" for="q3_r1">
-            tuberculosis
+            uniqueid()
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q3" id="q3_r2" value="1" required/>
           <label class="form-check-label" for="q3_r2">
-            cholera
+            id()
+
+
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q3" id="q3_r3" value="0" required/>
           <label class="form-check-label" for="q3_r3">
-            malaria
+            mid()
           </label>
         </div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q3" id="q3_r4" value="0" required/>
           <label class="form-check-label" for="q3_r4">
-            diabetes
+            None of the above
           </label>
         </div>
 
