--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         jQuery('#login-form')[0].reset();
         jQuery('#msg').html('All the Best! ');
         jQuery('#btnSubmit').attr('dissable',false);
-        location.replace("https://hrithik1122.github.io/quizilla.github.io/quiz.html")
+        location.replace("quiz.html")
       }
     });
   });
