--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <span class="required">Password</span>
       </label>
     </div> -->
+  <a href="quiz.html">
     <input type="submit" id="btnsubmit" value="Next" name="btnsubmit" />
+  </a>
     <div id="msg1"></div>
     <div id="msg"></div>
     <!-- <div class="email">
