--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
         <span class="required">Password</span>
       </label>
     </div> -->
+  <div>
+  <label class="label-email">
   <a href="quiz.html">
     <input type="submit" id="btnsubmit" value="Next" name="btnsubmit" />
   </a>
+  </label>
+  </div>
     <div id="msg1"></div>
     <div id="msg"></div>
     <!-- <div class="email">
