--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <link rel="stylesheet" href="css/style.css">
 
 <form method="POST" action="" id="login-form" autocomplete="off" role="main">
-    <h1 class="a11y-hidden">Login Form</h1>
+     <h4 align="center"> Quizilla 📝</h4>
     <div>
-     
+          <center>
+            Student Login
+          </center>
         <label class="label-email">
           <input type="text" class="text" name="name" placeholder="Full Name" tabindex="1" required />
           <span class="required">Full Name</span>
